# claude-bridge

./: .gitignore  CHANGELOG.md  CLAUDE.md  INVESTIGATION.md  MANIFEST.in  README.md  README_en.md  install.sh  pyproject.toml
channel/: format.ts  lib.ts  package.json  server.ts
channel/__tests__/: format.test.ts  lib.test.ts
plan/implementation/: phase-6-tasks.md
plan/phases/phase-6-wiki-memory/: README.md
specs/tasks/: M23-T1.md  M23-T2.md  M24-T1.md  M24-T2.md  M24-T3.md  M25-T1.md  M25-T2.md  M25-T3.md
src/claude_bridge/: __init__.py  agent_md.py  bridge_bot_claude_md.py  cli.py  daemon.py  db.py  dispatcher.py  loop_orchestrator.py  mcp_server.py  mcp_tools.py  message_db.py  notify.py  on_complete.py  scheduler.py  session.py  telegram_poller.py  tmux_session.py  watcher.py  wiki.py
src/claude_bridge/prompts/: __init__.py  wiki_ingest.md  wiki_query.md  wiki_schema_template.md
tests/: conftest.py  test_agent_md.py  test_cli.py  test_db_schedules.py  test_dispatcher.py  test_imp15_daemon.py  test_mcp_wiki_query.py  test_message_db.py  test_multiuser.py  test_scheduler.py  test_session.py  test_setup_wizard.py  test_watcher.py  test_wiki.py  test_wiki_cli.py  test_wiki_ingest.py  test_wiki_ingest_prompt.py  test_wiki_query.py  test_wiki_query_prompt.py  test_wiki_retrieve.py
