[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-agent-bridge"
dynamic = ["version"]
description = "Multi-session Claude Code dispatch from Telegram"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "mcp>=1.0,<2.0",
]
keywords = ["claude", "claude-code", "telegram", "ai", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
]

[project.scripts]
bridge-cli = "claude_bridge.cli:main"
bridge = "claude_bridge.bridge_cmd:main"

[tool.setuptools.dynamic]
version = {attr = "claude_bridge.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
claude_bridge = ["channel_server/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
